config/async-requests/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: async-vs
spec:
  hosts:
  - "write-to-db.default.50.22.129.219.xip.io"
  gateways:
  - knative-serving/cluster-local-gateway
  - knative-serving/knative-ingress-gateway
  http:
  - match:
    - headers:
        Prefer:
          exact: respond-async
      ignoreUriCase: true
    route:
    - destination:
        host: producer-service.default.svc.cluster.local
        port:
            number: 80
